--- a/app/globals.css
+++ b/app/globals.css
@@ -2,25 +2,45 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #475367;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-inter: var(--font-inter);
+  --font-dm-sans: var(--font-dm-sans);
+  --color-primary: #239dea;
+  --color-secondary: #1d2739;
+  --color-grey: #101928;
+  --color-tertiary: #475367;
+  --color-dark: #16365f;
+  --color-light: #f7f9fc;
+  --color-accent: #ad3307;
+  --color-success: #04802e;
+  --color-info: #fbeae9;
+  --color-fade: #F9FAFB
+  --color-background: #e7f6ec;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter);
+  /* max-width: 1280px; */
+  overflow-x: hidden;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+button {
+  cursor: pointer;
+}
+
+.swiper-pagination-bullet {
+  @apply bg-gray-400 w-3 h-3 opacity-60;
+}
+.swiper-pagination-bullet-active {
+  @apply bg-indigo-500 opacity-100;
 }
